fixed alignment issues

--- a/src/assets/scss/core/spaces.scss
+++ b/src/assets/scss/core/spaces.scss
@@ -73,6 +73,12 @@
   margin-bottom: .5rem;
 }
 
+
+.my-24{
+  margin-top: toRem(24px);
+  margin-bottom: toRem(24px);
+}
+
 .my-28{
   margin-top: toRem(28px);
   margin-bottom: toRem(28px);
